Update and rename main.yml to fix-imports.yml

--- a/.github/workflows/fix-imports.yml
+++ b/.github/workflows/fix-imports.yml
@@ -1,9 +1,10 @@
+# .github/workflows/fix-imports.yml
 name: Fix flutter_uvc_camera imports
 
 on:
+  workflow_dispatch:
   push:
     branches: [ main ]
-  workflow_dispatch:
 
 permissions:
   contents: write
@@ -14,16 +15,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Replace old imports with relative imports
         run: |
           echo "Fixing imports..."
           if [ -d lib/src ]; then
+            # package->relative
             find lib/src -type f -name "*.dart" -exec sed -i \
               "s#import 'package:flutter_uvc_camera/flutter_uvc_camera.dart';#import '../flutter_uvc_camera.dart';#g" {} \;
           fi
 
-      - name: Create Pull Request
+      - name: Create PR with changes
         uses: peter-evans/create-pull-request@v6
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
