--- a/android/build.gradle
+++ b/android/build.gradle
@@ -66,7 +66,7 @@ android {
         implementation 'com.github.chenyeju295.AndroidUSBCamera:libuvc:3.3.6'
         implementation 'androidx.appcompat:appcompat:1.6.1'
         implementation fileTree(dir: 'libs', include: ['*.jar'])
-        implementation 'com.android.support.constraint:constraint-layout: 5.0.0'
+        implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
         implementation 'com.google.code.gson:gson:2.8.8'
     }
 
